k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookwithlove-backend
  namespace: cookwithlove
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookwithlove-backend
  template:
    metadata:
      labels:
        app: cookwithlove-backend
    spec:
      containers:
        - name: cookwithlove-backend
          image: jovanoskalj21/cookwithlove-backend:latest
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: cookwithlove-backend
  namespace: cookwithlove
spec:
  selector:
    app: cookwithlove-backend
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
