k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookwithlove-frontend
  namespace: cookwithlove
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookwithlove-frontend
  template:
    metadata:
      labels:
        app: cookwithlove-frontend
    spec:
      containers:
        - name: cookwithlove-frontend
          image: jovanoskalj21/cookwithlove-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cookwithlove-frontend
  namespace: cookwithlove
spec:
  selector:
    app: cookwithlove-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
